--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.lang | default: site.lang | default: "ru" }}">
 
 <head>
     
-    {% if site.google_analytics %}
+<!--     {% if site.google_analytics %}
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -11,7 +11,7 @@
         gtag('js', new Date());
         gtag('config', '{{ site.google_analytics }}');
     </script>
-    {% endif %}
+    {% endif %} -->
     
     <!-- Non social metatags -->
     <meta charset="utf-8">
@@ -48,7 +48,7 @@
         <link rel="alternate" media="handheld" href=""> -->
         
         
-        <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | absolute_url }}">
+        <link rel="stylesheet" href="/assets/css/style.css">
     </head>
     <body>
         
@@ -159,4 +159,3 @@
         
     </body>
     </html>
-    
