--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
     <!-- <link rel="alternate" media="only screen and (max-width: 640px)" href="">
         <link rel="alternate" media="handheld" href=""> -->
         
-        
+        <link rel="stylesheet" href="/assets/css/font.css">
         <link rel="stylesheet" href="/assets/css/style.css">
     </head>
     <body>
