--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -538,10 +538,10 @@ th {
 body {
     padding: 0;
     margin: 0;
-    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "MTSans-RegularCondensed";
     font-size: 16px;
     line-height: 1.5;
-    color: #606c71;
+    color: #b8b8a2;
 	background-color: #1C1C1E;
 	background-image: url("../images/sparkles.png");
 }
