--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -538,7 +538,7 @@ th {
 body {
     padding: 0;
     margin: 0;
-    font-family: "MTSans-RegularCondensed";
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: #b8b8a2;
