--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -568,6 +568,34 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+.video-hero {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  position: relative;
+}
+.video-hero .video-bg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+  background: #222327;
+}
+.video-hero .video-bg video {
+  min-width: 100%;
+  min-height: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.6;
+}
+
 .btn {
     display: inline-block;
     margin-bottom: 1rem;
