--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,10 @@
         {% assign page-tagline = page.tagline | escape  %}
         {% endif %}
         
-        <section class="page-header">
+        <section class="page-header video-hero">
+			<div class="video-bg">
+				<video src="/assets/video/home.mp4" autoplay muted loop></video>
+			</div>
             <h1 class="project-name">{{ page-title }}</h1>
             <h2 class="project-tagline">{{ page-tagline }}</h2>
             {% if page.layout == 'home' and site.github.is_project_page %}
