--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -569,33 +569,6 @@ a:hover {
     text-decoration: underline;
 }
 
-.video-hero {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  position: relative;
-}
-.video-hero .video-bg {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  overflow: hidden;
-  background: #222327;
-}
-.video-hero .video-bg video {
-  min-width: 100%;
-  min-height: 100%;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0.6;
-}
-
 .btn {
     display: inline-block;
     margin-bottom: 1rem;
@@ -642,8 +615,8 @@ a:hover {
 .page-header {
     color: #fff;
     text-align: center;
-    background-color: #159957;
-    background-image: linear-gradient(120deg, #155799, #159957);
+    background-color: #1C1C1E;
+    background-image: url("../images/experiment.jpg");
 }
 @media screen and (min-width: 64em) {
     .page-header {
