--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -617,6 +617,7 @@ a:hover {
     text-align: center;
     background-color: #1C1C1E;
     background-image: url("../images/experiment.jpg");
+	background-size: cover;
 }
 @media screen and (min-width: 64em) {
     .page-header {
