Update blockquote's style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -828,10 +828,11 @@ a:hover {
     margin-top: 0;
 }
 .main-content blockquote {
-    padding: 0 1rem;
-    margin-left: 0;
-    color: #819198;
-    border-left: 0.3rem solid #dce6f0;
+	border-left: #efefb2 2px solid;
+    background-color: rgba(69, 69, 64, .1);
+    padding: 20px 30px 14px;
+	margin-left: 0;
+    margin-bottom: 40px;
 }
 .main-content blockquote > :first-child {
     margin-top: 0;
