--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,17 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
+@font-face {
+  font-family: "MTSans-BoldCondensed";
+  font-style: normal;
+  font-weight: 800;
+  src: url("../fonts/MTSans-BoldCondensed.woff2") format('woff2');
+}
+
+@font-face {
+  font-family: "MTSans-RegularCondensed";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/MTSans-RegularCondensed.woff2") format('woff2');
+}
 html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
@@ -962,17 +975,4 @@ a:hover {
         width: 36px;
         height: 36px;
     }
-}
-@font-face {
-  font-family: 'MTSans-BoldCondensed';
-  font-style: normal;
-  font-weight: 800;
-  src: url("../fonts/MTSans-BoldCondensed.woff2") format('woff2');
-}
-
-@font-face {
-  font-family: 'MTSans-RegularCondensed';
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/MTSans-RegularCondensed.woff2") format('woff2');
 }
