--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,11 +66,11 @@
         <section class="page-header">
             <h1 class="project-name">{{ page-title }}</h1>
             <h2 class="project-tagline">{{ page-tagline }}</h2>
-            {% if page.layout == 'home' and site.github.is_project_page %}
-            <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+            {% if page.layout == 'home' %}
+            <a href="/" class="btn">Получить домен</a>
             {% if site.show_downloads %}
-            <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-            <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+            <a href="/" class="btn">Подать жалобу</a>
+            <a href="/" class="btn">Download .tar.gz</a>
             {% endif %}
             {% endif %}
             <!-- Post tagline -->
