--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -685,10 +685,9 @@ a:hover {
     }
 }
 .project-date {
+	color: #f25322;
     margin-bottom: 0rem;
     font-weight: normal;
-    opacity: 0.7;
-    font-style: italic;
 }
 @media screen and (min-width: 64em) {
     .project-date {
