--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,9 +66,9 @@
         <section class="page-header">
             <h1 class="project-name">{{ page-title }}</h1>
             <h2 class="project-tagline">{{ page-tagline }}</h2>
-            <a href="/" class="button button-small button-secondary"><span class="button-text">Кнопка один</span></a>
-            <a href="/" class="button button-small button-secondary"><span class="button-text">КНОПКА ДВА</span></a>
-            <a href="/" class="button button-small button-secondary"><span class="button-text">Кнопка три</span></a>
+            <a href="/" class="button"><span class="button-text">Кнопка один</span></a>
+            <a href="/" class="button"><span class="button-text">КНОПКА ДВА</span></a>
+            <a href="/" class="button"><span class="button-text">Кнопка три</span></a>
             <!-- Post tagline -->
             {% if page.layout == 'post' %}
             <h2 class="project-date">
