--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,9 +67,9 @@
             <h1 class="project-name">{{ page-title }}</h1>
             <h2 class="project-tagline">{{ page-tagline }}</h2>
 			{% if page.layout == 'home' %}
-            <a href="/" class="button button-small button-secondary"><span class="button-text">Кнопка один</span></a>
-            <a href="/" class="button button-small button-secondary"><span class="button-text">КНОПКА ДВА</span></a>
-            <a href="/" class="button button-small button-secondary"><span class="button-text">Кнопка три</span></a>
+            <a href="/" class="button button-small button-secondary"><span class="button-text">Отправить запрос</span></a>
+            <a href="/" class="button button-small button-secondary"><span class="button-text">Задать вопрос</span></a>
+            <a href="/" class="button button-small button-secondary"><span class="button-text">Подать жалобу</span></a>
 			{% endif %}
             <!-- Post tagline -->
             {% if page.layout == 'post' %}
